--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,15 @@ vertex = [
 
 ollama = ["ollama"]
 
-vertex = ["google-genai", "google-api-core", "google-auth", "torch", "anthropic", "transformers"]
+vertex = [
+    "google-genai",
+    "google-api-core",
+    "google-auth",
+    "torch",
+    "anthropic",
+    "transformers",
+]
+
 
 litellm = ["litellm", "torch", "transformers"]
 
