--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ torch = { version = "^2.6.0", optional = true }
 transformers = { version = "^4.46.2", optional = true }
 litellm = { version = "^1.61.16", optional = true }
 pymongo = { version = "^4.11.1", optional = true }
+pydantic = "^2.11.7"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -112,16 +113,6 @@ vertex = [
 ]
 
 ollama = ["ollama"]
-
-vertex = [
-    "google-genai",
-    "google-api-core",
-    "google-auth",
-    "torch",
-    "anthropic",
-    "transformers",
-]
-
 
 litellm = ["litellm", "torch", "transformers"]
 
