--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ uvicorn = "^0.32.1"
 
 # --- optional packages ---
 anthropic = { version = "^0.60.0", optional = true }
+azure-identity = { version = "^1.20.0", optional = true }
 cerebras-cloud-sdk = { version = "^1.25.0", optional = true }
 google-api-core = { version = "^2.24.2", optional = true }
 google-genai = { version = "^1.29.0", optional = true }
@@ -116,6 +117,8 @@ ollama = ["ollama"]
 litellm = ["litellm", "torch", "transformers"]
 
 mongo = ["pymongo"]
+
+azure = ["azure-identity"]
 
 
 [build-system]
