--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ coloredlogs = "^15.0.1"
 contextvars = "^2.4"
 croniter = "^5.0.1"
 fastapi = "0.115.12"
-fastmcp = "2.6.1"
+fastmcp = "^2.6"
 httpx = "^0.28.1"
 jinja2 = "^3.1.6"
 jsonfinder = "^0.4.2"
