--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,14 +25,14 @@ coloredlogs = "^15.0.1"
 contextvars = "^2.4"
 croniter = "^5.0.1"
 fastapi = "0.115.12"
-fastmcp = "^2.6"
+fastmcp = "^2.12.4"
 httpx = "^0.28.1"
 jinja2 = "^3.1.6"
 jsonfinder = "^0.4.2"
 jsonschema = "^4.23.0"
 lagom = "^2.6.0"
 limits = "^5.5.0"
-mcp = { extras = ["cli"], version = "^1.7.1" }
+mcp = "^1.16.0"
 more-itertools = ">=10.3.0"
 nano-vectordb = "^0.0.4.3"
 nanoid = "^2.0.0"
@@ -66,7 +66,7 @@ google-api-core = { version = "^2.24.2", optional = true }
 google-genai = { version = "^1.36.0", optional = true }
 ollama = { version = "^0.5.0", optional = true }
 google-auth = { version = "^2.40.0", optional = true }
-together = { version = "^1.2.12", optional = true }
+together = { version = "^1.5.26", optional = true }
 torch = { version = "^2.6.0", optional = true }
 transformers = { version = "^4.46.2", optional = true }
 litellm = { version = "^1.61.16", optional = true }
