--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,16 @@ parlant-prepare-migration = "parlant.bin.prepare_migration:main"
 aiofiles = "^24.1.0"
 aiopenapi3 = "0.8.1"
 aiorwlock = "^1.5.0"
+authlib = "^1.6.5"
 boto3 = "^1.35.70"
 cachetools = "5.5.2"
-chromadb = "1.1.1"
 click = "^8.1.7"
 colorama = "^0.4.6"
 coloredlogs = "^15.0.1"
 contextvars = "^2.4"
 croniter = "^5.0.1"
 fastapi = "0.115.12"
-fastmcp = "^2.12.4"
+fastmcp = "2.12.5"
 httpx = "^0.28.1"
 jinja2 = "^3.1.6"
 jsonfinder = "^0.4.2"
@@ -62,6 +62,7 @@ uvicorn = "^0.32.1"
 anthropic = { version = "^0.60.0", optional = true }
 azure-identity = { version = "^1.20.0", optional = true }
 cerebras-cloud-sdk = { version = "^1.25.0", optional = true }
+chromadb = { version = "^1.1.1", optional = true }
 google-api-core = { version = "^2.24.2", optional = true }
 google-genai = { version = "^1.36.0", optional = true }
 ollama = { version = "^0.5.0", optional = true }
@@ -92,6 +93,9 @@ types-requests = "^2.32.0.20240712"
 pytest-xdist = "^3.6.1"
 
 [tool.poetry.extras]
+chroma = ["chromadb"]
+mongo = ["pymongo"]
+
 anthropic = ["anthropic", "torch", "transformers"]
 
 aws = ["anthropic", "transformers", "torch"]
@@ -117,13 +121,15 @@ ollama = ["ollama"]
 
 litellm = ["litellm", "torch", "transformers"]
 
-mongo = ["pymongo"]
+
 
 azure = ["azure-identity"]
 
 fireworks = ["fireworks-ai"]
 
 mistral = ["mistralai"]
+
+
 
 
 [build-system]
