Fixing broken scoping in data collection
Signed-off-by: Dor Zohar <dor@emcie.co>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ types-cachetools = "^6.0.0.20250525"
 types-croniter = "^4.0.0.20241030"
 types-jsonschema = "^4.22.0.20240610"
 uvicorn = "^0.38.0"
+websocket-client="^1.5.3"
 
 
 # --- optional packages ---
