Address review comments: add metrics tracking and remove redundant tiktoken dependency
Signed-off-by: Lu Han <feuyeux@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,11 +136,7 @@ fireworks = ["fireworks-ai"]
 
 mistral = ["mistralai"]
 
-zhipu = ["zhipuai", "tiktoken"]
-
-
-
-
+zhipu = ["zhipuai"]
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
