--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ litellm = { version = "^1.61.16", optional = true }
 pymongo = { version = "^4.11.1", optional = true }
 fireworks-ai = { version = "^0.19.19", optional = true }
 mistralai = { version = "^1.0.0", optional = true }
+pydantic = "^2.12.4"
 
 
 [tool.poetry.group.dev.dependencies]
