--- a/src/parlant/api/chat/package.json
+++ b/src/parlant/api/chat/package.json
@@ -39,6 +39,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
