--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ torch = { version = "^2.7.1", optional = true }
 transformers = { version = "^4.53.0", optional = true }
 litellm = { version = "^1.61.16", optional = true }
 pymongo = { version = "^4.11.1", optional = true }
-fireworks-ai = { version = "^0.19.19", optional = true }
+# fireworks-ai = { version = "^0.19.19", optional = true }  # Disabled: pins protobuf=5.29.3 which has CVE-2025-4565
 mistralai = { version = "^1.0.0", optional = true }
 zhipuai = { version = "^2.0.0", optional = true }
 snowflake-connector-python = { version = "^3.12.0", optional = true }
