--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,11 +83,10 @@ pymongo = { version = "^4.11.1", optional = true }
 mistralai = { version = "^1.0.0", optional = true }
 zhipuai = { version = "^2.0.0", optional = true }
 snowflake-connector-python = { version = "^3.12.0", optional = true }
-
+moto = { extras = ["s3"], version = "^5.0.0", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.26.0"
-moto = {extras = ["s3"], version = "^5.0.0"}
 mypy = "^1.18.1"
 pep8-naming = "^0.13.3"
 pytest = "^8.0.0"
@@ -143,6 +142,8 @@ mistral = ["mistralai"]
 snowflake = ["snowflake-connector-python"]
 
 zhipu = ["zhipuai"]
+
+s3 = ["moto"]
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
