--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ azure-identity = { version = "^1.20.0", optional = true }
 cerebras-cloud-sdk = { version = "^1.25.0", optional = true }
 chromadb = { version = "^1.1.1", optional = true }
 qdrant-client = { version = "^1.7.0", optional = true }
+pinecone-client = { version = "^5.0.0", optional = true }
 google-api-core = { version = "^2.24.2", optional = true }
 google-genai = { version = "^1.36.0", optional = true }
 ollama = { version = "^0.5.0", optional = true }
@@ -104,6 +105,7 @@ pytest-xdist = "^3.6.1"
 [tool.poetry.extras]
 chroma = ["chromadb"]
 qdrant = ["qdrant-client"]
+pinecone = ["pinecone-client"]
 mongo = ["pymongo"]
 
 anthropic = ["anthropic", "torch", "transformers"]
