--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ pymongo = { version = "^4.11.1", optional = true }
 mistralai = { version = "^1.0.0", optional = true }
 zhipuai = { version = "^2.0.0", optional = true }
 snowflake-connector-python = { version = "^3.12.0", optional = true }
+pocketbase = { version = "^0.15.0", optional = true }
 
 
 [tool.poetry.group.dev.dependencies]
@@ -141,7 +142,7 @@ mistral = ["mistralai"]
 
 snowflake = ["snowflake-connector-python"]
 
-pocketbase = []  # Uses httpx which is already a core dependency
+pocketbase = ["pocketbase"]
 
 zhipu = ["zhipuai"]
 
