--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,6 @@ filterwarnings =
     ignore::pytest.PytestDeprecationWarning:pytest_bdd.*
     ignore::pytest.PytestWarning:.*usefixtures.*has no effect
 addopts = "--import-mode=importlib"
+markers =
+    engine: marks tests related to engine behavior
+    evaluation: marks tests related to preprocessing evaluations
