--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ addopts = "--import-mode=importlib"
 markers =
     engine: marks tests related to engine behavior
     evaluation: marks tests related to preprocessing evaluations
+    integration: marks tests that require external services (PostgreSQL, etc.)
