--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "parlant"
-version = "3.2.0-rc.1"
+version = "3.2.0"
 description = ""
 readme = "README.md"
 license = "Apache-2.0"
